@@ -6,19 +6,21 @@ AUX psmisc-22.16-fuser-pic.patch 598 RMD160 a4849d45221fda30b929492b7516e08062d5
 DIST psmisc-22.14.tar.gz 382024 RMD160 56a1b2ab415013ac18fa8a49b9cd67dc1f735822 SHA1 dc6fc0ec131c11796d01512bbd80089719b04a66 SHA256 22bbf4561837af475c0d8d14e3b9cab453998c787212c107fac7faf2f281e26e
 DIST psmisc-22.16.tar.gz 465138 RMD160 3f51ae4d93082111cd649513ac85fbc6cfb4586e SHA1 27f1c8deab06e79101af1914ff81a9d561f2fcfe SHA256 ae426d7238e5353fdf51b1d313897c2bbed0023e66e5b4af2be9cd03d87a9d01
 DIST psmisc-22.18.tar.gz 492705 RMD160 b38a1b3d007d64a018ef06883a4d23387469de11 SHA1 964f6daa0950b128a0840d9df4dc0b671730a83c SHA256 afa3a44be18db403f6f631d448f89d9d66304c1590e0cf25583a2b65bc0893d0
+DIST psmisc-22.19.tar.gz 492733 RMD160 30a76e565e6f4aa3d39e6a5068aeb3c5d9c0c3b1 SHA1 4c8fb774449f966f78c4c6e1d77d1a24b4187410 SHA256 e112ccadd4694c98f5ea4a02cd6944fdc5a2a1985f20e2b3f74f4dbca83a2a31
 EBUILD psmisc-22.14.ebuild 1695 RMD160 53f776d73f61855e088789e0f15cc06ce436cba3 SHA1 ca356ac21b43c7b899a3d8d83c3f1eaa95fe5b23 SHA256 5bc21e953ac9f7b50239668ee09880568fce744a6b766483d4fdc3dfc7397241
 EBUILD psmisc-22.16.ebuild 1417 RMD160 3339506c80f91bc85a6ec6ab4ed1a6115151ba96 SHA1 a38a97fdc2fb17895a5d9158ea8dbc2bfb8875ac SHA256 d45bbbdcb506df0aecaa857fc229b220335c590a34ef6a9b439a1b364a3500bd
 EBUILD psmisc-22.18.ebuild 1327 RMD160 7db23b611efc0ec098c5a117f6d67cd6612d581a SHA1 878faf123e882a5da81c3fc749aed1574f6aa159 SHA256 503bddb2ff8b90c2c26d840b59ecb03f5eb7e5785599748f2c93e11c44c6b4f0
-MISC ChangeLog 21983 RMD160 a2bd225c83585b5182205cc96bed753e1d20cd9c SHA1 68ba13c78ab5aa2a707a17afc49dc1c105402533 SHA256 12642b8dc2589bbdbd023b014c37769de9f0c39650869b3800b16e1de710c624
+EBUILD psmisc-22.19.ebuild 1327 RMD160 de5c88757b075dee6413382b89bc8311a1b40bd9 SHA1 dbc646084bf57669d8436d39efb435adb2a04655 SHA256 aefd2bb20b4580e8956c28847b8ce0664fc81bbc5b6fbd5dc3e8177221826219
+MISC ChangeLog 22105 RMD160 ba7767696d194ea1b677939c706adb5911a06177 SHA1 d384394de1172348dacbe81cd548720261bcf90a SHA256 e3636b195a3454cade9fcd41479afe3a1bc8020adc495e32f2b0ac431c9b9357
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBAgAGBQJP4CCPAAoJEEdUh39IaPFN1LYH+gOxKgRAGyuwyHfTbIYV/zuS
-4it+cJLMcDmVwQfWkTbMzw3glgNu8yoxsMJY+MFr9ovdUwZQRvl2FVus/JbnYjft
-XZBcPSfNYxHiGOv48LEfd4TMk5WOofdJgtnKscBgZvJKaZlCgHfa6HAslRxOdxDi
-W12cT34gES81eQ8OJy+WIIS2FXmVvdpElaQJYOb61HtOmvDb6MZH5/6+NtbSUnCl
-qSvplsrMZCCJEIPrdPkKNkr3u7i2IjcGOMW4EXZSNB4aZC9PiBmf+JrYbTFxqH6R
-LXGOiyvZenFmENwE1WJk6NJmtxWqtVCQ0COk4iHQOPT1AXeIwB5o0KVZWcztUn4=
-=uHaI
+iQEcBAEBAgAGBQJP7rI/AAoJEEdUh39IaPFNuVcH/RTkcNInvsDsabs2H3F6iHHd
+YK8/jha113jbh3dpdTZD2VxjJVq/hh7s1GIfkiWaF2olnYSDsbVgcOy9j5ODeqiA
+U5tSVJYeQUV6WGrRXfX1TJSnwUpQyWgV0keBhHxrrjPgW0YcuT01Hp3D/RIh2EE+
+1rHXAmiuKyEUR2gKVL80N7edLfpQVrKk6czZGf9yHWE6VaowNc/RQbl+ZI0IkYyG
+qy83AbOfYN/g+Pma5D359rivmDwOPwZeBW3avngmjaIyN8k0VVjr5QQ3jSvdz4NV
+5GCEneRORTaH9pHrpzW6toqH+l8mthnbO35ZkEO9g10bOgThrFEd/DnNbxH5ZiY=
+=dRO1
 -----END PGP SIGNATURE-----
